메인화면, 화면전환,홈화면버튼,운동영상링크구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,19 @@
         android:theme="@style/Theme.Login"
         tools:targetApi="31">
         <activity
-            android:name=".Home"
+            android:name=".Video"
             android:exported="false" />
         <activity
-            android:name=".login"
+            android:name=".Stopwatch"
             android:exported="false" />
+        <activity
+            android:name=".Checklist"
+            android:exported="false" />
+
+        <activity
+            android:name=".Home"
+            android:exported="false" />
+
         <activity
             android:name=".signup"
             android:exported="false" />
